# practics

./: .gitignore
algoritms/: .pylintrc  benchmarking.py  binary_search.py  dyn_greatest_increasin_subsequence.py  dyn_longest_common_subsequence.py  dynamic_fib.py  equal_string_dyn.py  factorial.py  greatest_common_divisor.py  levenstein_dyn.py  pow.py  recursion.py  search_benchmarking.py  search_binary.py  search_binary_thiryanov.py  search_simple.py  search_substring.py  search_test.py  sort_benchmarking.py  sort_bubble.py  sort_count.py  sort_default.py  sort_hoare_rec.py  sort_insert.py  sort_merge.py  sort_selection.py  sort_test.py  stack_class.py  stack_module.py  traj_num.py  two_dimensional_arrays.py
algoritms/module/: graphics.py
dj_empty_template/: README.md  gunicorn_config.py.example  requirements.txt
django-crispy-forms/: .editorconfig  README.md  requirements.txt
djangoapps/: .editorconfig  README.md  pyproject.toml
djangoapps/middleware1/: apps.py  middleware.py
djangoapps/pro/: settings.py  urls.py
drf/: db.sqlite3
drf_vincent/: db.sqlite3
flask/: app.db  config.py  microblog.py
patterns/: .editorconfig  info.md
py/: class_parameters.py  decorators.py  is_simple_number.py  new_realease.py  pyproject.toml  timing.py  typing.py
py/sanjwik/: stdio.py
py_luchano/: .editorconfig  array_deque.py  array_ex.py  bisect.py  dict.py  listcomp.py  tuple.py
py_pandas/: datatype_date.py
tg_bot/: aio_bot.py  db.db  main.py
threading_py/: threading_py.py
vue_cryptonomicon/: package-lock.json  package.json
wagtail_ru/: requiments.txt
(+187 files in other folders)
