[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["alexIGit <toevilhell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typing-extensions = "^4.8.0"
pympler = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
